[tool.poetry]
name = "icma484-graph-theory-random-graphs-project"
version = "0.1.0"
description = ""
authors = ["mythicalbadger <jussy12.work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
networkx = "^3.2.1"
black = "^24.2.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
pre-commit = "^3.6.2"
streamlit = "^1.31.1"
matplotlib = "^3.8.3"
scipy = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
